Bug 278060 - Mailing list detection does not work
Summary: Mailing list detection does not work
Status: CLOSED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: folders (other bugs)
Version First Reported In: 2.1.1
Platform: Mageia RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 285825 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-07-19 04:08 UTC by Balcaen John
Modified: 2011-11-16 19:42 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.7.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Balcaen John 2011-07-19 04:08:12 UTC
Version:           2.1.1 (using Devel) 
OS:                Linux

With kmail2 from kdepim 4.7 RC2 ( 4.6.95) when selecting mailing list management to detect a mailing list the mailing list is not detected.
The folder is an imap folder holding kdepim mailing list with disconnect mode enable.

Reproducible: Always

Steps to Reproduce:
Start a fresh kmail2 config & add an imap account with disconnect mode enable
Select the folder holding a mailing list & try to detect this mailing list

Actual Results:  
Nothing happens

Expected Results:  
It should work like in kmail1
Comment 1 Laurent Montel 2011-07-19 08:05:36 UTC
I fixed some bugs in master/4.7
Wait new package and retest please
Comment 2 Balcaen John 2011-07-27 23:24:24 UTC
It's still valid with kdepim 4.7.0
Comment 3 Laurent Montel 2011-08-01 07:24:36 UTC
Work fine in master.
Comment 4 Balcaen John 2011-08-01 14:12:50 UTC
it does not in kde 4.7.
Also i'm not able to build master currently to test with it since it seems requering a new version of akonadi

( In file included from /home/mikala/rpm/BUILD/kdepim-runtime-4.7.40/resources/dav/resource/davgroupwareresource.cpp:19:0:
/home/mikala/rpm/BUILD/kdepim-runtime-4.7.40/resources/dav/resource/davgroupwareresource.h:25:47: fatal error: akonadi/kcal/freebusyproviderbase.h: No such file or directory
i personally named the kdepim4-runtime tarball 4.7.40 )
Comment 5 Nicolas L. 2011-08-27 22:49:35 UTC
can you explain how to test ? ( how to detect the ML ? ) ( i will test on a kde 4.7 then )
Comment 6 Nicolas L. 2011-08-27 23:01:55 UTC
seems to work here, but really really long to achieve the action.
Comment 7 Balcaen John 2011-08-27 23:26:55 UTC
I did another test and in fact if i'm selecting a message in the folder (disconnect imap with around 8000 messages) it's working after 3 minutes.
Comment 8 Laurent Montel 2011-11-05 16:32:36 UTC
*** Bug 285825 has been marked as a duplicate of this bug. ***
Comment 9 Laurent Montel 2011-11-16 19:41:15 UTC
Git commit 07740cb10c7a1f76c73d27cf90364418fa5703c2 by Montel Laurent.
Committed on 16/11/2011 at 20:40.
Pushed by mlaurent into branch 'master'.

Fix Bug 278060 - Mailing list detection does not work

FIXED-IN: 4.7.4
BUG: 278060

M  +7    -11   kmail/messageactions.cpp

http://commits.kde.org/kdepim/07740cb10c7a1f76c73d27cf90364418fa5703c2
Comment 10 Laurent Montel 2011-11-16 19:42:12 UTC
Git commit 1c921bb7360d0ad9961530e937d3c2f49bb98cba by Montel Laurent.
Committed on 16/11/2011 at 20:40.
Pushed by mlaurent into branch 'KDE/4.7'.

Fix Bug 278060 - Mailing list detection does not work

FIXED-IN: 4.7.4
BUG: 278060
(cherry picked from commit 07740cb10c7a1f76c73d27cf90364418fa5703c2)

M  +7    -11   kmail/messageactions.cpp

http://commits.kde.org/kdepim/1c921bb7360d0ad9961530e937d3c2f49bb98cba