Fix Bug 278060 - Mailing list detection does not work

FIXED-IN: 4.7.4
BUG: 278060
(cherry picked from commit 07740cb10c7a1f76c73d27cf90364418fa5703c2)